_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-bottom: 1px solid $grey-color-light;
    min-height: 56px;
    padding: 0 $spacing-unit;

    // Positioning context for the mobile navigation icon
    position: relative;

    @include media-query($on-palm) {
        padding: $spacing-unit / 2;
    }

    @media print {
        display: none;
    }
}

.site-title {
    font-size: 26px;
    font-weight: 800;
    font-family: $heading-font-family;
    line-height: 56px;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;
    font-weight: 800;
    font-family: $heading-font-family;

    .menu-icon {
        display: none;
    }

    .page-link {
        line-height: $base-line-height;

        // Gaps between nav items, but not on the last one
        &:not(:last-child) {
            margin-right: 20px;
        }
    }

    @include media-query($on-laptop) {
        position: absolute;
        top: 9px;
        right: $spacing-unit / 2;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;

            &:not(:last-child) {
                margin-right: 0;
            }
            margin-left: 20px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit;
    clear: both;
    text-align: center;
    font-size: 0.8em;

    .copyright {
        color: $grey-color;
    }

    @media print {
        display: none;
    }
}



/**
 * Page content
 */
.page-content {
    padding: $spacing-unit;
    overflow: hidden;

    @include media-query($on-palm) {
        padding: $spacing-unit / 2;
    }

    @media print {
        padding: 0;
    }
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;

    @media print {
        display: none;
    }
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

